--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,5 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation group: 'com.fazecast', name: 'jSerialComm', version: '2.7.0'
 }
